# automate-facebook-posts

./: .gitignore  .main.py.swp  CONTRIBUTING.md  README.md  about.py  browser_utils.py  common_functions.py  configuration.py  constants.py  history.py  login.py  main.py  manual_mode.py  publish.py  pyproject.toml  requirements.txt  styles.tcss  subscription.py
.github/workflows/: release.yml
backend/: .env.example  .gitignore  README.md  alembic.ini  config.py  database.py  main.py  models.py  podman-compose.yml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 06dedfda4faf_remove_user_id_column_user_table.py  4671c78364f9_create_users_table.py  afbde32ddf99_remove_role_password_add_admin_table.py  b3eae62bfb36_add_user_password_column.py
backend/app/: config.py  database.py  main.py  models.py  security.py  startup.py
cli/: DOCS.md  browser_utils.py  common_functions.py  main.py  manual_mode.py  pyproject.toml  subscription.py
tui/: README.md  about.py  browser_utils.py  common_functions.py  configuration.py  constants.py  history.py  log.py  machine_id.py  main.py  manual_mode.py  publish.py  pyproject.toml  styles.tcss  subscription.py
tui/locales_fb/: en.toml  es.toml
