[project]
name = "autofbpost-api"
version = "0.2.2"
description = "Automate facebook posts - API"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "fastapi[standard]>=0.135.1",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.11",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.12.1",
    "pytest>=9.0.2",
    "sqlmodel>=0.0.37",
]

[dependency-groups]
dev = ["ruff>=0.15.6"]
