[project]
name = "autofbpost"
version = "0.1.0"
description = "Automate facebook posts - CLI"
requires-python = ">=3.12"
dependencies = [
    "fs>=2.4.16",
    "httpx>=0.28.1",
    "nuitka>=2.6.4",
    "playwright>=1.50.0",
    "py-machineid>=0.7.0",
    "typer>=0.15.1",
]

[dependency-groups]
dev = [
    "ruff>=0.9.5",
]
