[project]
name = "autofbpost"
version = "0.2.4"
description = "Automate facebook posts - TUI"
requires-python = ">=3.13"
dependencies = [
    "copykitten>=1.2.2",
    "fs>=2.4.16",
    "httpx>=0.28.1",
    "nuitka>=2.7",
    "playwright>=1.52.0",
    "py-machineid>=0.7.0",
    "rtoml>=0.12.0",
    "textual>=3.2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.8",
    "textual-dev>=1.7.0",
]
