[project]
name = "autofbpost"
version = "0.3.0"
description = "Automate facebook posts - TUI"
requires-python = ">=3.13"
dependencies = [
    "copykitten>=2.0.0",
    "fs>=2.4.16",
    "httpx>=0.28.1",
    "nuitka>=2.8.6",
    "playwright>=1.56.0",
    "py-machineid>=0.8.0",
    "rtoml>=0.12.0",
    "textual>=6.6.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.6",
    "textual-dev>=1.8.0",
]
