[project]
name = "autofbpost"
version = "0.3.0"
description = "Automate facebook posts - TUI"
requires-python = ">=3.13"
dependencies = [
    "copykitten>=2.0.0",
    "fs>=2.4.16",
    "httpx>=0.28.1",
    "nuitka==4.0.3",
    "playwright==1.58.0",
    "py-machineid==1.0.0",
    "rtoml>=0.12.0",
    "ruff==0.15.5",
    "textual==8.0.2",
]

[dependency-groups]
dev = [
    "ruff>=0.14.6",
    "textual-dev>=1.8.0",
]
